--- a/gzclubteam/src/main/webapp/WEB-INF/web.xml
+++ b/gzclubteam/src/main/webapp/WEB-INF/web.xml
@@ -6,8 +6,9 @@
         <param-name>contextConfigLocation</param-name>  
         <param-value>classpath:spring-mybatis.xml</param-value>  
     </context-param>  
-    <!-- 编码过滤器 -->  
+    
     <filter>  
+        <description>编码过滤器</description>
         <filter-name>encodingFilter</filter-name>  
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>  
         <async-supported>true</async-supported>  
@@ -16,20 +17,59 @@
             <param-value>UTF-8</param-value>  
         </init-param>  
     </filter>  
+    
+    <filter>
+        <description>主过滤器</description>
+        <filter-name>mainFilter</filter-name>
+        <filter-class>com.gzclubteam.inc.MainFilter</filter-class>
+        <async-supported>true</async-supported>  
+        <init-param>
+           <param-name>creatTime</param-name>
+           <param-value>2016-5-23 12:46:31</param-value>
+        </init-param>
+    </filter>
+    
+    <filter>
+        <description>附件过滤器</description>
+        <filter-name>attachFilter</filter-name>
+        <filter-class>com.gzclubteam.inc.AttachFilter</filter-class>
+        <async-supported>true</async-supported>  
+        <init-param>
+           <param-name>creatTime</param-name>
+           <param-value>2016-5-23 12:46:31</param-value>
+        </init-param>
+    </filter>
+    
     <filter-mapping>  
         <filter-name>encodingFilter</filter-name>  
         <url-pattern>/*</url-pattern>  
     </filter-mapping>  
-    <!-- Spring监听器 -->  
+    
+    <filter-mapping>  
+        <filter-name>mainFilter</filter-name>  
+        <url-pattern>/*</url-pattern>  
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>  
+    
+    <filter-mapping>  
+        <filter-name>attachFilter</filter-name>  
+        <url-pattern>/*</url-pattern>  
+    </filter-mapping>
+    
     <listener>  
+        <description>Spring监听器</description>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>  
     </listener>  
-    <!-- 防止Spring内存溢出监听器 -->  
+    
     <listener>  
+        <description>防止Spring内存溢出监听器</description>
         <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>  
     </listener>  
-    <!-- Spring MVC servlet -->  
+    
     <servlet>  
+        <description>Spring MVC servlet</description>
         <servlet-name>SpringMVC</servlet-name>  
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>  
         <init-param>  
@@ -41,9 +81,9 @@
     </servlet>  
     <servlet-mapping>  
         <servlet-name>SpringMVC</servlet-name>  
-        <!-- 此处可以可以配置成*.action，对应struts的后缀习惯 -->  
         <url-pattern>*.action</url-pattern>  
     </servlet-mapping>  
+    
     <welcome-file-list>  
         <welcome-file>/index.jsp</welcome-file>  
     </welcome-file-list>
