--- a/gzclubteam/src/main/webapp/WEB-INF/web.xml
+++ b/gzclubteam/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>gzclubteam</display-name>
-    <!-- Spring和mybatis的配置文件 -->  
+    <display-name>gzclubteam</display-name>
+  
     <context-param>  
+        <description>Spring和mybatis的配置文件</description>
         <param-name>contextConfigLocation</param-name>  
         <param-value>classpath:spring-mybatis.xml</param-value>  
     </context-param>  
